<resources>
    <string name="app_name">SkinSavvy</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_notifications">Notifications</string>
    <string name="navigation_scan">Scan</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_explore">Explore</string>
    <string name="navigation_history">History</string>
    <string name="navigation_product">Products</string>
    <string name="scan_contentDesc">Scan Your Skin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Selamat Datang di SkinSavvy</string>
    <string name="welcome_desc">Menjadi katalis keindahan wajah yang alami</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="signin">Sign In</string>
    <string name="password">Password</string>
    <string name="password_length_error_message">Silahkan masukkan password dengan benar</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="story_app">SkinSavvy</string>
    <string name="desc_ss">"Solusi Cerdas untuk Kulit Sehatmu"</string>
    <string name="SkinnSavvy">SkinnSavvy</string>
    <string name="sign_In">Sign In</string>
    <string name="title_signin_page">Wellcome</string>
    <string name="SignUp">Sign Up\n</string>
    <string name="SignIn">Sign In</string>
    <string name="navigation_favorite">Favorite</string>
    <string name="title_home">Home\n</string>
    <string name="Info">About</string>
    <string name="title_article">Lets See Ur Faforite Product</string>
    <string name="title_Product">Let\'s See Your Fav Product</string>
</resources>